--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,11 +5,222 @@
 
 html {
 	margin: 0;
-  padding: 0;
+	padding: 0;
 	font-size: 16px;
-  background-color: white;
+	background-color: white;
 }
 
 
 /* CUSTOM PAGINATION */
+* CUSTOM PAGINATION */
 
+#pagination_links {
+	text-align: center;
+	font-size: 18px;
+	line-height: 1.555;
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
+
+#pagination_links .page-numbers ul{
+	list-style: none;
+}
+
+#pagination_links .page-numbers li{
+	display:inline;
+	margin-right: 5px;
+}
+
+#pagination_links .page-numbers {
+
+}
+
+#pagination_links .page-numbers .current {
+	color: #5d7083;
+	border: 1px solid #5d7083;
+	border-radius: 5px;
+	padding:  6.75px 13.5px 6.75px 13.5px ;
+	margin: 5px;
+}
+
+/* STILI PERSONALIZZATI */
+
+.bg-banner-persone {
+	background-color: #f5f5f5;
+}
+
+.card.card-avatar .card-avatar-img {
+	width: 40px;
+	height: 40px;
+	flex-shrink: 0;
+	margin: 0 12px 0 0;
+	border-radius: 50%;
+	overflow: hidden;
+}
+
+.color-invert {
+	filter: brightness(0%) invert(100%);
+}
+
+.chip-selected {
+	background: #30475f !important;
+	border-color: #30475f !important;
+	color: #ffffff;
+}
+
+.chip-selected a {
+	color: #ffffff;
+}
+
+.chip-label a {
+	text-decoration: none !important;
+}
+
+.menutree {}
+
+.menutree a {
+	text-decoration: none;
+}
+
+.menutree ul {}
+
+.menutree ul li {}
+
+.box_change_map_lang {
+	width: 100%;
+	text-align: center;
+	margin-bottom: 20px;
+	margin-top: 20px;
+}
+
+.it-brand-title h1.h3 {
+	font-size: 1em !important;
+}
+
+
+
+@media only screen and (max-width: 450px) {
+		.it-brand-title h1.h3 {
+				font-size: 1em !important;
+				line-height: 1.25rem;
+		}
+	}
+
+
+.it-brand-tagline {
+	font-size: 1rem !important;
+		
+}
+
+.display_block {
+	display: block !important;
+}
+
+
+/** Accessibilità*/
+
+.it-footer a {
+	text-decoration: none;
+}
+
+.it-footer-main .link-list-wrapper ul li a:not(.disabled) {
+	text-decoration: none;
+}
+
+.it-footer-main .link-list-wrapper ul li a:hover {
+	text-decoration: underline !important;
+}
+
+.it-footer-small-prints a:hover:not(.disabled) {
+	color:#fff;
+	font-size:1rem;
+	text-decoration: underline !important;
+}
+
+.mappasitolink {
+	display: flex;
+	gap: 4px;
+}
+
+.mappasitolink:hover {
+	text-decoration: underline !important;
+}
+
+#button-newsletter-iscriviti {
+	background-color: inherit !important;
+}
+
+#button-newsletter-iscriviti:hover {
+	background-color: #17324d !important;
+}
+
+.customSpacingDiv {
+	display: flex;
+	gap: 4px;
+}
+
+.customSpacing {
+	height: 24px !important;
+	transform: translateY(-2px) !important;
+}
+
+.customSpacing a {
+	display: block !important;
+	min-width: 24px !important;
+	min-height: 24px !important;
+}
+
+.cardTitlecustomSpacing {
+
+}
+
+.cardTitlecustomSpacing a {
+	display: inline-block !important;
+	min-height: 24px !important;
+}
+
+/** CHIPS */
+.hover-text-white:hover {
+	color: white !important;
+}
+
+/* modifiche visibilità hero e banner */
+
+.it-hero-wrapper .it-hero-text-wrapper span, .it-hero-wrapper .it-hero-text-wrapper h1, .it-hero-wrapper .it-hero-text-wrapper .h1, .it-hero-wrapper .it-hero-text-wrapper h2, .it-hero-wrapper .it-hero-text-wrapper .h2, .it-hero-wrapper .it-hero-text-wrapper h3, .it-hero-wrapper .it-hero-text-wrapper .h3, .it-hero-wrapper .it-hero-text-wrapper h4, .it-hero-wrapper .it-hero-text-wrapper .h4, .it-hero-wrapper .it-hero-text-wrapper h5, .it-hero-wrapper .it-hero-text-wrapper .h5, .it-hero-wrapper .it-hero-text-wrapper h6, .it-hero-wrapper .it-hero-text-wrapper .h6, .it-hero-wrapper .it-hero-text-wrapper p {
+	text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.8);
+}
+
+.it-hero-wrapper.it-overlay.it-dark .img-responsive-wrapper:after {
+	background: rgba(0, 64, 89, 0.2);
+}
+
+.it-hero-wrapper.it-overlay.it-primary .img-responsive-wrapper:after {
+	background: rgba(0, 0, 0, 0.2);
+}
+
+.container-banner-home .it-hero-wrapper .it-hero-text-wrapper {
+	background: rgba(0, 64, 89, 0.4) !important;
+}
+
+
+/* card progetti */
+.dli_card_progetti .head-tags {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 8px; /* Spazio tra i bottoni */
+}
+
+.dli_card_progetti .card-tag {
+	/* flex: 1 1 100%;  Occupa l'intera larghezza disponibile */
+}
+
+.dli_card_progetti a {
+	text-align: center;
+}
+
+/* RIMUOVE ORVERLAPPIng  */
+@media (min-width: 1400px) {
+		.it-hero-wrapper.it-bottom-overlapping-content+.container .card-wrapper .card-body {
+				padding-top: 0px;
+		}
+}
