Fixed bug in fa visualization

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -235,6 +235,6 @@ html {
 }
 
 .service-paragraph {
-	padding:0.25em 0;
-	border-bottom: 1px solid ;
+	padding: 0.25em 0;
+	border-bottom: 1px solid #c5c7c9;
 }
