Bug-fixing: Fixed page FAQ by topic

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,10 @@ html {
 	border-bottom: 0px;
 }
 
+.faq-topic-wrapper ul li a {
+	padding: 0px !important;
+}
+
 /* CUSTOM PAGINATION */
 
 #pagination_links {
